style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.container {
    padding-left: 15%;
    padding-right: 15%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

body {
    font-family: 'Roboto', sans-serif;
}

header {
    background-color: #1F2937;
    font-size: 18px;
    color: #E5E7EB;
    padding: 20px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 900;
}

a {
    text-decoration: none;
    color: inherit;
}

ul {
    display: flex;
    gap: 20px;
    list-style: none;
}

.hero {
    background-color: #1F2937;
    padding: 100px 20px;
}

.hero-text {
    flex: 1;
}

.hero-text h1 {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
    max-width: 450px;
}

.hero-text p {
    font-size: 18px;
    color: #E5E7EB;
    margin-bottom: 8px;
    max-width: 450px;
}

button {
    background-color: #3882f6;
    font-size: 16px;
    font-weight: 900;
    color: #F9FAF8;
    padding: 8px 32px;
    border: none;
    border-radius: 8px;
}

.hero-image {
    background-color: #6B7280;
    flex: 1;
    height: 250px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #F9FAF8;
}

.info .container {
    display: flex;
    flex-direction: column;
}

.info-text {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    margin-top: 40px;
}

.items-group {
    display: flex;
    justify-content: center;
    gap: 50px;
    margin-top: 40px;
    margin-bottom: 80px;
}

.item {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 200px;
}

.item p {
    font-size: 18px;
    color: #1F2937;
    margin-top: 8px;
}

.box {
    width: 200px;
    height: 200px;
    border: 4px solid #3882f6;
    border-radius: 15px;
}

.quote {
    background-color: #E5E7EB;
    padding: 100px 0;
}

.quote .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.quote-text {
    font-size: 36px;
    font-weight: 300;
    color: #1F2937;
    font-style: italic;
    max-width: 850px;
}

.author {
    font-size: 24px;
    color: #1F2937;
    align-self: flex-end;
}

.cta .container {
    margin: 100px;
}

.cta-banner {
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: #3882f6;
    border-radius: 8px;
    padding: 50px 80px;
    width: 100%;
}

.cta-text h3 {
    font-size: 24px;
    color: white;
    font-weight: 700;
    margin-bottom: 4px;
}

.cta-text p {
    font-size: 18px;
    color: white;

}

.cta-banner button {
    border: 2px solid #F9FAF8;
    background-color: #3882f6;
    color: #F9FAF8;
    padding: 8px 32px;
    border-radius: 8px;
    font-weight: bold;
}

footer {
    background-color: #1F2937;
    color: #F9FAF8;
    padding: 30px;
    text-align: center;
    font-size: 18px;
}

